fullscreen area icon glitch #42495

Closed
opened 2014-11-05 08:05:49 +01:00 by Campbell Barton · 13 comments

With current master, press Alt+F10

Then move the mouse cursor to the top right of the screen.

An hidden icon shows up to restore the previous view.

Move the cursor away quickly away from the icon.

If you move quickly the icon wont vanish as its supposed to and will stay at some partial alpha.

With current master, press Alt+F10 Then move the mouse cursor to the top right of the screen. An hidden icon shows up to restore the previous view. Move the cursor away quickly away from the icon. If you move quickly the icon wont vanish as its supposed to and will stay at some partial alpha.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Dalai Felinto was assigned by Campbell Barton 2014-11-05 08:05:50 +01:00
Author
Owner

Added subscriber: @ideasman42

Added subscriber: @ideasman42
Member

Added subscribers: @dfelinto, @JulianEisel

Added subscribers: @dfelinto, @JulianEisel
Member

@dfelinto, shall I have a look at this, 'cause I have an idea that might fix this easily?

@dfelinto, shall I have a look at this, 'cause I have an idea that might fix this easily?
Dalai Felinto was unassigned by Julian Eisel 2014-11-11 09:29:12 +01:00
Julian Eisel self-assigned this 2014-11-11 09:29:12 +01:00

@ideasman42 the only fix I can think of is to have the entire editor area as action zone. Though this would still "temporarily fail" when you move the mouse from the editor to another editor. It would get back to its correct state as soon as the mouse is in the editor region again though.

@ideasman42 the only fix I can think of is to have the entire editor area as action zone. Though this would still "temporarily fail" when you move the mouse from the editor to another editor. It would get back to its correct state as soon as the mouse is in the editor region again though.

@JulianEisel what is your idea of fix for this?

@JulianEisel what is your idea of fix for this?
Member

Mhh, nevermind, looked at it a bit deeper and turned out to be not working.
I don't really like the idea of having the entire area an actionzone, but we could use this as a temporary fix. Actionzones were just not made for these kind of things.
A proper solution would be to use uiBut. I know that we currently can't draw buttons over the 3D View, but D584 makes this possible (I'd like to rewrite the patch a bit, since it just draws a panel with invisible background - not a nice solution IMO). The fading in/out effect could easily be implemented then.

Mhh, nevermind, looked at it a bit deeper and turned out to be not working. I don't really like the idea of having the entire area an actionzone, but we could use this as a temporary fix. Actionzones were just not made for these kind of things. A proper solution would be to use uiBut. I know that we currently can't draw buttons over the 3D View, but [D584](https://archive.blender.org/developer/D584) makes this possible (I'd like to rewrite the patch a bit, since it just draws a panel with invisible background - not a nice solution IMO). The fading in/out effect could easily be implemented then.

Added subscriber: @Leon95

Added subscriber: @Leon95

Just a fool question: Can this not resolved with a timer?
like this:

if Mouse in actionzone
 start timer(1 second) (or timeout)

#######


timer()
 if mouse in actionzone:
  keep timer
 else:
  alpha=0
  stop timer
Just a fool question: Can this not resolved with a timer? like this: ``` if Mouse in actionzone start timer(1 second) (or timeout) ``` ####### ``` timer() if mouse in actionzone: keep timer else: alpha=0 stop timer
Member

@Leon95, yes that could work. Not exactly as you wrote, but I think using a timer might be a good approach. Will have a look soon.

@Leon95, yes that *could* work. Not exactly as you wrote, but I think using a timer might be a good approach. Will have a look soon.

This issue was referenced by 3bffcc675b

This issue was referenced by 3bffcc675b3fea221b0b93d1f2055173edd7f75b
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit 3bffcc675b.

Closed by commit 3bffcc675b.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#42495
No description provided.